test: should raise to 9 in the first round when has 2 manilhas